--- a/apps.json
+++ b/apps.json
@@ -2,36 +2,27 @@
   "apps": [
     {
       "title": "Don't B Late",
-      "logo": "pics/logos/dontblate.png",
-      "screenshot": "pics/screenshots/dontblate.jpeg",
+      "filename": "dontblate",
       "description": "Stay on track with reminders and countdowns.",
       "googlePlay": "https://play.google.com/store/apps/details?id=io.bitbucket.imurnane.dont_be_late",
       "appleStore": "",
-      "discordLink": "https://discord.gg/mNDANcde",
-      "privacyPolicy": "policies/DontBLate-PrivacyPolicy.html",
-      "tos": "policies/DontBLate-TermsOfService.html"
+      "discordLink": "https://discord.gg/mNDANcde"
     },
     {
       "title": "Story Bear AI",
-      "logo": "pics/logos/storybear.png",
-      "screenshot": "pics/screenshots/storybear.jpeg",
+      "filename": "storybear",
       "description": "Create and enjoy AI-generated stories.",
       "googlePlay": "https://play.google.com/store/apps/details?id=io.bitbucket.imurnane.storybearai",
       "appleStore": "",
-      "discordLink": "https://discord.gg/mNDANcde",
-      "privacyPolicy": "policies/StoryBearAI-PrivacyPolicy.html",
-      "tos": "policies/StoryBearAI-TermsOfService.html"
+      "discordLink": "https://discord.gg/mNDANcde"
     },
     {
       "title": "Story Cub AI",
-      "logo": "pics/logos/storycub.png",
-      "screenshot": "pics/screenshots/storycub.jpeg",
+      "filename": "storycub",
       "description": "Create and enjoy AI-generated stories for children.",
       "googlePlay": "https://play.google.com/store/apps/details?id=io.bitbucket.imurnane.storybearai.kid",
       "appleStore": "",
-      "discordLink": "https://discord.gg/mNDANcde",
-      "privacyPolicy": "policies/StoryCubAI-PrivacyPolicy.html",
-      "tos": "policies/StoryCubAI-TermsOfService.html"
+      "discordLink": "https://discord.gg/mNDANcde"
     }
   ]
 }
