added new app ad-revenue-explorer

--- a/apps.json
+++ b/apps.json
@@ -9,6 +9,14 @@
       "discordLink": "https://discord.gg/mNDANcde"
     },
     {
+      "title": "Ad Revenue Explorer",
+      "filename": "adrevenueexplorer",
+      "description": "Ad Revenue Explorer helps developers, publishers, and the curious understand how mobile ad revenue varies across countries and ad formats.",
+      "googlePlay": "https://play.google.com/store/apps/details?id=com.apparcadestudios.ad_revenue",
+      "appleStore": "",
+      "discordLink": "https://discord.gg/mNDANcde"
+    },
+    {
       "title": "Aki Bear AI",
       "filename": "akibear",
       "description": "Infinite AI generated short anime-inspired stories",
