updated babysnooze play store link. increased spacing between cards

--- a/apps.json
+++ b/apps.json
@@ -28,7 +28,7 @@
       "title": "Baby Snooze",
       "filename": "babysnooze",
       "description": "Gentle music to help your baby sleep peacefully",
-      "googlePlay": "",
+      "googlePlay": "https://play.google.com/store/apps/details?id=io.bitbucket.imurnane.chillax.babysnooze",
       "appleStore": "",
       "discordLink": "https://discord.gg/mNDANcde"
     },
